--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,13 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MineLauncher"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525"
+        Title="MineLauncher" Height="350" Width="525"
         DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+        
+        <StackPanel Orientation="Vertical">
+            <TextBlock Text="{Binding Account.Username, Source={x:Static local:App.Instance}}" HorizontalAlignment="Right" Padding="10"/>
+        </StackPanel>
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -38,7 +42,8 @@
             <ComboBox Grid.Column="1" Grid.Row="1"
                       ItemsSource="{Binding Source={x:Static local:App.Instance}, Path=Repos.Values}"
                       SelectedItem="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo, Mode=TwoWay}"
-                      DisplayMemberPath="Title"/>
+                      DisplayMemberPath="Title"
+                      IsEnabled="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo.CanDispatchTask}"/>
             <Button Grid.Column="1" Grid.Row="2" Click="ActionClicked" IsEnabled="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo.CanDispatchTask}">
                 <Button.Style>
                     <Style TargetType="Button">
