--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,8 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MineLauncher"
+        xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+        xmlns:properties="clr-namespace:MineLauncher.Properties"
         mc:Ignorable="d"
-        Title="MineLauncher" Height="350" Width="525"
+        Title="MineLauncher" Height="600" Width="800"
+        MinHeight="600" MinWidth="800"
         DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
         <Grid.RowDefinitions>
@@ -13,54 +16,93 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         
-        <StackPanel Orientation="Vertical">
-            <TextBlock Text="{Binding Account.Username, Source={x:Static local:App.Instance}}" HorizontalAlignment="Right" Padding="10"/>
-        </StackPanel>
-
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="150"/>
-            </Grid.ColumnDefinitions>
+        <Grid Grid.Row="0">
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="1"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.ColumnSpan="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="30"/>
-                </Grid.ColumnDefinitions>
-                <TextBox Text="{Binding AppSettings.InstallDir, Source={x:Static local:App.Instance}, Mode=TwoWay}"/>
-                <Button Grid.Column="1" Click="BrowseClicked">...</Button>
-            </Grid>
-            <Grid Grid.Row="1" Grid.RowSpan="2" Grid.Column="0">
-                <ProgressBar Value="{Binding SelectedRepo.RepoUpdateProgress, Source={x:Static local:App.Instance}}"/>
-                <TextBlock Text="{Binding SelectedRepo.RepoUpdateProgressText, Source={x:Static local:App.Instance}}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            </Grid>
-            <ComboBox Grid.Column="1" Grid.Row="1"
-                      ItemsSource="{Binding Source={x:Static local:App.Instance}, Path=Repos.Values}"
-                      SelectedItem="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo, Mode=TwoWay}"
-                      DisplayMemberPath="Title"
-                      IsEnabled="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo.CanDispatchTask}"/>
-            <Button Grid.Column="1" Grid.Row="2" Click="ActionClicked" IsEnabled="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo.CanDispatchTask}">
-                <Button.Style>
-                    <Style TargetType="Button">
-                        <!-- Default value (false case) -->
-                        <Setter Property="Content" Value="Update"/>
             
-                        <!-- When true -->
-                        <Style.Triggers>
-                            <DataTrigger 
-                                Binding="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo.IsUpToDate}" 
-                                Value="True">
-                                <Setter Property="Content" Value="Play"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>
-            </Button>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                
+                <ItemsControl Grid.Column="0" ItemsSource="{Binding Source={x:Static local:App.Instance}, Path=Repos.Values}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <local:MainTab Checked="ModpackTabChecked" GroupItemName="{Binding Key}">
+                                <TextBlock Text="{Binding Title}"/>
+                                <local:MainTab.Screen>
+                                    <!-- Define your screen content here -->
+                                    <Border Background="HotPink">
+                                        <TextBlock Text="Modpack stuff here" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </local:MainTab.Screen>
+                            </local:MainTab>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+                
+                <StackPanel Grid.Column="2" Orientation="Horizontal">
+                    <local:MainTab GroupItemName="settings">
+                        <materialIcons:MaterialIcon Kind="Settings" Margin="5"/>
+                        <local:MainTab.Screen>
+                            <local:SettingsScreen/>
+                        </local:MainTab.Screen>
+                    </local:MainTab>
+                    <local:MainTab GroupItemName="account">
+                        <local:AccountWidget/>
+                        <local:MainTab.Screen>
+                            <Border Background="DeepPink">
+                                <TextBlock Text="Account stuff here" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </local:MainTab.Screen>
+                    </local:MainTab>
+                </StackPanel>
+            </Grid>
+            
+            <Rectangle Grid.Row="1" Fill="DarkGray"/>
+            
+            <Grid x:Name="Screen" Grid.Row="2">
+                <ContentPresenter Content="{Binding SelectedScreen}"/>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Row="1" Height="70" Visibility="{Binding ActionPanelVisibility, Source={x:Static local:App.Instance}}">
+            <Grid>
+                <ProgressBar Value="{Binding SelectedRepo.RepoUpdateProgress, Source={x:Static local:App.Instance}, Mode=OneWay}"/>
+                <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Button Click="ActionClicked" Width="150" Height="30" IsEnabled="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo.CanDispatchTask}">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <!-- Default value (false case) -->
+                                <Setter Property="Content" Value="{x:Static properties:Strings.Update_Title}"/>
+            
+                                <!-- When true -->
+                                <Style.Triggers>
+                                    <DataTrigger 
+                                        Binding="{Binding Source={x:Static local:App.Instance}, Path=SelectedRepo.IsUpToDate}" 
+                                        Value="True">
+                                        <Setter Property="Content" Value="{x:Static properties:Strings.Play_Title}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+                    </Button>
+                    <TextBlock
+                        Text="{Binding SelectedRepo.RepoUpdateProgressText, Source={x:Static local:App.Instance}}"
+                        Visibility="{Binding SelectedRepo.RepoUpdateProgressTextVisibility, Source={x:Static local:App.Instance}}"
+                        HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 5, 0, 0"/>
+                </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
