--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -39,37 +39,46 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <local:MainTab GroupItemName="{Binding Key}">
+                            <local:MainTab 
+                                Screen="{Binding ElementName=Screen}"
+                                GroupItemName="{Binding Info.Key}">
                                 <TextBlock Text="{Binding Title}"/>
-                                <local:MainTab.Screen>
+                                <local:MainTab.ScreenContent>
                                     <screens:ModpackGenericScreen/>
-                                </local:MainTab.Screen>
+                                </local:MainTab.ScreenContent>
                             </local:MainTab>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
                 
                 <StackPanel Grid.Column="2" Orientation="Horizontal">
-                    <local:MainTab GroupItemName="settings">
-                        <materialIcons:MaterialIcon Kind="Settings" Margin="5"/>
-                        <local:MainTab.Screen>
-                            <screens:SettingsScreen/>
-                        </local:MainTab.Screen>
+                    <local:MainTab GroupItemName="logs"
+                                   Screen="{Binding ElementName=Screen}">
+                        <materialIcons:MaterialIcon Kind="ViewList" Margin="4, 0"/>
+                        <local:MainTab.ScreenContent>
+                            <screens:LogsScreen/>
+                        </local:MainTab.ScreenContent>
                     </local:MainTab>
-                    <local:MainTab GroupItemName="account">
+                    <local:MainTab GroupItemName="settings"
+                                   Screen="{Binding ElementName=Screen}">
+                        <materialIcons:MaterialIcon Kind="Settings" Margin="4, 0"/>
+                        <local:MainTab.ScreenContent>
+                            <screens:SettingsScreen/>
+                        </local:MainTab.ScreenContent>
+                    </local:MainTab>
+                    <local:MainTab GroupItemName="account"
+                                   Screen="{Binding ElementName=Screen}">
                         <local:AccountWidget/>
-                        <local:MainTab.Screen>
+                        <local:MainTab.ScreenContent>
                             <screens:AccountScreen/>
-                        </local:MainTab.Screen>
+                        </local:MainTab.ScreenContent>
                     </local:MainTab>
                 </StackPanel>
             </Grid>
             
             <Rectangle Grid.Row="1" Fill="DarkGray"/>
             
-            <Grid x:Name="Screen" Grid.Row="2">
-                <ContentPresenter Content="{Binding SelectedScreen}"/>
-            </Grid>
+            <local:MainTabScreen x:Name="Screen" Grid.Row="2"/>
         </Grid>
 
         <Grid Grid.Row="1" Height="70" Visibility="{Binding ActionPanelVisibility, Source={x:Static local:App.Instance}}">
