--- a/Widgets/MainTabScreen.xaml
+++ b/Widgets/MainTabScreen.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:MineLauncher"
+             xmlns:launcher="clr-namespace:MineLauncher"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400">
-    <ContentPresenter Content="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:MainTabScreen}}, Path=ScreenContent}"/>
+    <ContentPresenter Content="{Binding RelativeSource={RelativeSource AncestorType={x:Type launcher:MainTabScreen}}, Path=ScreenContent}"/>
 </UserControl>
