--- a/Screens/AccountScreen.xaml
+++ b/Screens/AccountScreen.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:launcher="clr-namespace:MineLauncher"
              xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+             xmlns:widgets="clr-namespace:MineLauncher.Widgets"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400"
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
@@ -16,29 +17,36 @@
         </Grid>
 
         <!-- Content when account exists -->
-        <StackPanel 
-            Visibility="{Binding Source={x:Static launcher:App.Instance}, Path=Account, Converter={StaticResource NotNullToVisibilityConverter}}"
-                    Grid.IsSharedSizeScope="True" Margin="2">
-            <Grid Margin="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" SharedSizeGroup="SG"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Margin="0, 0, 4, 0" Text="(DEBUG) Player name"/>
-                <TextBox Grid.Column="1" 
-                           Text="{Binding Source={x:Static launcher:App.Instance}, Path=Account.Username, Mode=TwoWay}"
-                           Margin="0, 0, 2, 0"/>
-            </Grid>
-            <Grid Margin="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" SharedSizeGroup="SG"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Margin="0, 0, 4, 0" Text="(DEBUG) Auth token"/>
-                <TextBox Grid.Column="1" 
-                         Text="{Binding Source={x:Static launcher:App.Instance}, Path=Account.Token, Mode=TwoWay}"
-                         Margin="0, 0, 2, 0"/>
-            </Grid>
-        </StackPanel>
+        <Grid Visibility="{Binding Source={x:Static launcher:App.Instance}, Path=Account, Converter={StaticResource NotNullToVisibilityConverter}}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            
+            <widgets:SkinView Grid.Column="0" Margin="4"/>
+            
+            <StackPanel Grid.Column="1" Margin="4" Grid.IsSharedSizeScope="True">
+                <Grid Margin="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="SG"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Margin="0, 0, 4, 0" Text="(DEBUG) Player name"/>
+                    <TextBox Grid.Column="1" 
+                             Text="{Binding Source={x:Static launcher:App.Instance}, Path=Account.Username, Mode=TwoWay}"
+                             Margin="0, 0, 2, 0"/>
+                </Grid>
+                <Grid Margin="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="SG"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Margin="0, 0, 4, 0" Text="(DEBUG) Auth token"/>
+                    <TextBox Grid.Column="1" 
+                             Text="{Binding Source={x:Static launcher:App.Instance}, Path=Account.Token, Mode=TwoWay}"
+                             Margin="0, 0, 2, 0"/>
+                </Grid>
+            </StackPanel>
+        </Grid>
     </Grid>
 </UserControl>
